crates/cubecl-core/tests/error/for_loop_range.rs
use cubecl_core as cubecl;
use cubecl::prelude::*;

#[cube]
fn range() {
    for _ in 0..10 {}
}

fn main() {}
