crates/cubecl-core/tests/error/for_loop_range.stderr
error: Invalid for loop: use [range](cubecl::prelude::range] instead.
 --> tests/error/for_loop_range.rs:6:14
  |
6 |     for _ in 0..10 {}
  |              ^^^^^
